--- a/src/app/pages/seller-offerings/offerings/seller-service-spec/create-service-spec/create-service-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-service-spec/create-service-spec/create-service-spec.component.html
@@ -234,15 +234,15 @@
                                             @for (char of prod.characteristicValueSpecification; track char; let last=$last) {
                                                 @if(char.value){
                                                     @if(!last){
-                                                        {{char.value}} <i>{{char?.unitOfMeasure}}</i>,
+                                                        {{char.value}} (<i>{{char?.unitOfMeasure}}</i>),
                                                     } @else {
-                                                        {{char.value}} <i>{{char?.unitOfMeasure}}</i>
+                                                        {{char.value}} (<i>{{char?.unitOfMeasure}}</i>)
                                                     }                                                    
                                                 } @else {
                                                     @if(!last){
-                                                        {{char.valueFrom}} - {{char.valueTo}} <i>{{char?.unitOfMeasure}}</i>,
+                                                        {{char.valueFrom}} - {{char.valueTo}} (<i>{{char?.unitOfMeasure}}</i>),
                                                     } @else {
-                                                        {{char.valueFrom}} - {{char.valueTo}} <i>{{char?.unitOfMeasure}}</i>
+                                                        {{char.valueFrom}} - {{char.valueTo}} (<i>{{char?.unitOfMeasure}}</i>)
                                                     }
                                                 }                                                
                                             }                                   
@@ -301,7 +301,7 @@
                                         <div class="flex w-full justify-between">
                                             <div class="align-items-middle align-middle">
                                                 <input [checked]="char?.isDefault" (click)="selectDefaultChar(char,idx)" id="disabled-checked-checkbox" type="checkbox" value="" class="align-middle w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-full focus:ring-blue-500 focus:ring-2">
-                                                <label for="disabled-checked-checkbox" class="ms-2 align-middle text-sm font-medium text-gray-700 dark:text-white text-wrap break-all">{{char.valueFrom}} - {{char.valueTo}} <i>{{char?.unitOfMeasure}}</i></label>    
+                                                <label for="disabled-checked-checkbox" class="ms-2 align-middle text-sm font-medium text-gray-700 dark:text-white text-wrap break-all">{{char.valueFrom}} - {{char.valueTo}} (<i>{{char?.unitOfMeasure}}</i>)</label>    
                                             </div>
                                             <button (click)="removeCharValue(char,idx)" class="m-2 text-white bg-red-500 rounded-3xl">
                                                 <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -315,7 +315,7 @@
                                         <div class="flex w-full justify-between">
                                             <div class="align-items-middle align-middle">
                                                 <input [checked]="char?.isDefault" (click)="selectDefaultChar(char,idx)" id="disabled-checked-checkbox" type="checkbox" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-full focus:ring-blue-500 focus:ring-2">
-                                                <label for="disabled-checked-checkbox" class="ms-2 text-sm font-medium text-gray-700 dark:text-white text-wrap break-all">{{char.value}} <i>{{char?.unitOfMeasure}}</i></label>    
+                                                <label for="disabled-checked-checkbox" class="ms-2 text-sm font-medium text-gray-700 dark:text-white text-wrap break-all">{{char.value}} (<i>{{char?.unitOfMeasure}}</i>)</label>    
                                             </div>
                                             <button (click)="removeCharValue(char,idx)" class="m-2 text-white bg-red-500 rounded-3xl">
                                                 <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -472,15 +472,15 @@
                                                 @for (char of prod.characteristicValueSpecification; track char; let last=$last) {
                                                     @if(char.value){
                                                         @if(!last){
-                                                            {{char.value}} <i>{{char?.unitOfMeasure}}</i>,
+                                                            {{char.value}} (<i>{{char?.unitOfMeasure}}</i>),
                                                         } @else {
-                                                            {{char.value}} <i>{{char?.unitOfMeasure}}</i>
+                                                            {{char.value}} (<i>{{char?.unitOfMeasure}}</i>)
                                                         }                                                    
                                                     } @else {
                                                         @if(!last){
-                                                            {{char.valueFrom}} - {{char.valueTo}} <i>{{char?.unitOfMeasure}}</i>,
+                                                            {{char.valueFrom}} - {{char.valueTo}} (<i>{{char?.unitOfMeasure}}</i>),
                                                         } @else {
-                                                            {{char.valueFrom}} - {{char.valueTo}} <i>{{char?.unitOfMeasure}}</i>
+                                                            {{char.valueFrom}} - {{char.valueTo}} (<i>{{char?.unitOfMeasure}}</i>)
                                                         }
                                                     }                                                
                                                 }                                   
