--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -30,7 +30,7 @@
         <bae-badge class="mr-2" [category]=cat></bae-badge>
       }
       @if(checkMoreCats){
-        <a class="text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md text-secondary-50 bg-primary-100 dark:bg-secondary-50 dark:text-primary-100 mb-2 mr-2">        
+        <a class="text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md text-secondary-50 bg-primary-100 dark:bg-secondary-50 dark:text-primary-100 mb-2 mr-2">
           <fa-icon [icon]="faEllipsis" class="text-secondary-50 dark:text-primary-100"></fa-icon>
         </a>
       }
@@ -73,7 +73,10 @@
           {{ 'CARD._details' | translate }}
         </button>
         @if(check_logged){
-          <button id="add-to-cart" (click)="toggleCartSelection();$event.stopPropagation();" [disabled]="!PURCHASE_ENABLED" [ngClass]="!PURCHASE_ENABLED ? 'opacity-50' : 'hover:bg-primary-50'" class="flex align-items-bottom text-white cursor-pointer bg-green-700 hover:bg-green-900 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
+          <button id="add-to-cart" (click)="prepareOffData()" type="button" [disabled]="!PURCHASE_ENABLED"
+                  data-drawer-target="drawer-add-to-cart" data-drawer-show="drawer-add-to-cart" aria-controls="drawer-add-to-cart" data-drawer-placement="right"
+                  [ngClass]="!PURCHASE_ENABLED ? 'opacity-50' : 'hover:bg-primary-50'"
+                  class="flex align-items-bottom text-white cursor-pointer bg-green-700 hover:bg-green-900 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
             {{ 'CARD._add_cart' | translate }}
           </button>
         }
@@ -81,6 +84,67 @@
     </div>
   </div>
 </div>
+
+
+
+<!-- drawer init and toggle -->
+
+<!-- drawer component -->
+<div id="drawer-add-to-cart" class="fixed top-0 right-0 z-40 h-screen p-4 pt-24 overflow-y-auto transition-transform translate-x-full bg-secondary-50 w-80 dark:bg-gray-800 flex flex-col" tabindex="-1" aria-labelledby="drawer-right-label">
+  <h5 id="drawer-right-label" class="inline-flex items-center mb-4 text-base font-semibold text-primary-100 dark:text-gray-400"><svg class="w-4 h-4 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+    <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+  </svg>Adding {{productOff?.name}} to cart</h5>
+  <button type="button" data-drawer-hide="drawer-add-to-cart" aria-controls="drawer-add-to-cart" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 absolute top-2.5 end-2.5 inline-flex items-center justify-center dark:hover:bg-gray-600 dark:hover:text-white" >
+    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+    </svg>
+    <span class="sr-only">Close menu</span>
+  </button>
+  <p class="mb-6 text-sm text-gray-500 dark:text-gray-400">In order to add <b>{{productOff?.name}}</b> to your cart you have to select the price model and the set of characteristics you prefer.</p>
+  <p class="mb-6 text-sm text-gray-500 dark:text-gray-400">Please, firstly select the price plan:</p>
+  @for (pp of productOff?.productOfferingPrice; track pp.id){
+    <div class="flex flex-col rounded-lg border border-dashed border-primary-100 bg-white p-2 m-2 gap-1 cursor-pointer hover:bg-sky-50 transition-all duration-200"
+         [ngClass]="{
+                'border-primary-100 border': pp.id !== selectedPricePlanId,
+                 'border-transparent outline outline-2 outline-teal-500 bg-teal-50': pp.id === selectedPricePlanId
+          }"
+          (click)="onPricePlanSelected(pp)">
+      <div class="text-base font-semibold text-primary-100 dark:text-gray-400 flex justify-between content-center">
+        {{pp.name}}
+        @if (pp.prodSpecCharValueUse){
+          <span class="bg-indigo-100 text-indigo-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-indigo-900 dark:text-indigo-300">PROFILE</span>
+        }
+      </div>
+      <div class="text-sm text-gray-500 dark:text-gray-400">{{pp.description}}</div>
+    </div>
+  } @empty {
+    <div>No plan prices currently available</div>
+  }
+
+  @if (selectedPricePlan) {
+    @if (selectedPricePlan.prodSpecCharValueUse) {
+      <p class="mt-6 text-sm text-gray-500 dark:text-gray-400">This price plan has an associate profile. That means that the following characteristics are already set for you.</p>
+      @for (ch of selectedPricePlan.prodSpecCharValueUse ; track ch.id) {
+        <app-characteristic [characteristic]="ch" (valueChange)="onValueChange($event)"></app-characteristic>
+      }
+    } @else {
+      <p class="mt-6 text-sm text-gray-500 dark:text-gray-400">Please select the characteristics you need to suit this offer to you.</p>
+      @for (ch of selected_chars ; track ch.characteristic.id) {
+        <div class="p-2">
+          {{ch.characteristic.name}}
+        </div>
+      }
+    }
+  }
+  <div class="mt-auto m-4 grid grid-cols-1 gap-4">
+    <a href="#" class="flex items-center justify-center gap-x-2 px-4 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Add to cart <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+    </svg></a>
+  </div>
+</div>
+
+
+
 
 <!-- Main modal -->
 @if (showModal){
@@ -129,15 +193,15 @@
                         }
                       }
                       @if(checkMoreCats){
-                        <a (click)="loadMoreCategories()" class="cursor-pointer text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md text-secondary-50 bg-primary-100 dark:bg-secondary-50 dark:text-primary-100 mb-2">        
+                        <a (click)="loadMoreCategories()" class="cursor-pointer text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md text-secondary-50 bg-primary-100 dark:bg-secondary-50 dark:text-primary-100 mb-2">
                           <fa-icon [icon]="faEllipsis" class="text-secondary-50 dark:text-primary-100"></fa-icon>
                         </a>
                       }
                       @if(closeCats){
                         <a (click)="closeCategories()" class="cursor-pointer text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md text-secondary-50 bg-primary-100 dark:bg-secondary-50 dark:text-primary-100 mb-2">
-                          <fa-icon [icon]="faClose" class="text-secondary-50 dark:text-primary-100"></fa-icon>                                                   
-                        </a>                        
-                      }         
+                          <fa-icon [icon]="faClose" class="text-secondary-50 dark:text-primary-100"></fa-icon>
+                        </a>
+                      }
                   </div>
               </div>
 
@@ -146,12 +210,12 @@
                 <img class="rounded-r-lg h-5/6 w-5/6 object-contain z-10 dark:text-white" src="{{getProductImage()}}" alt="Product image" />
               </div>
 
-              
+
               <!--<div [ngClass]="closeCats ? 'object-contain' : 'h-[200px]'" class="relative min-h-[200px] overflow-hidden flex justify-center items-center border border-1 border-gray-200 dark:border-gray-700 rounded-tr-lg">
                 <div class="absolute inset-0 bg-cover bg-center opacity-75" style="background-image: url({{getProductImage()}});filter: blur(20px);"></div>
                 <img class="rounded-r-lg h-5/6 w-5/6 object-contain z-10" src="{{getProductImage()}}" alt="product image" />
               </div>-->
-            
+
               <hr class="h-px border-gray-200 border-1 dark:border-gray-700">
           </div>
 
